# clear-signing

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  Package.swift  README.md  jitpack.yml  rust_out
android-consumer-smoke/: build.gradle  gradle.properties  (+1 more)
crates/clear-signing/: Cargo.toml  README.md
crates/clear-signing/examples/: fetch_erc20_fixtures.rs
crates/clear-signing/src/: decoder.rs  eip712.rs  eip712_domain.rs  engine.rs  error.rs  lib.rs  merge.rs  outcome.rs  path.rs  provider.rs  render_shared.rs  token.rs
crates/clear-signing/src/assets/registry-snapshot/: SNAPSHOT.rev  index.eip712.json
crates/clear-signing/src/resolver/: bundled_registry.rs  github_registry.rs  mod.rs  nested_resolution.rs  registry_common.rs  standard_token.rs  test_support.rs  typed_selection.rs
crates/clear-signing/src/types/: context.rs  display.rs  metadata.rs
crates/clear-signing/src/uniffi_compat/: mod.rs
crates/clear-signing/tests/: aave_integration.rs  batch_integration.rs  bundled_registry_integration.rs  celo_accounts_integration.rs  contract_name_integration.rs  erc4626_integration.rs  hyperliquid_cctp_integration.rs  lifi_integration.rs  lombard_lbtc_integration.rs  morpho_blue_integration.rs  okx_router_integration.rs  okx_smoke_test.rs  oneinch_v3_integration.rs  oneinch_v4_integration.rs  oneinch_v5_integration.rs  paraswap_v6_integration.rs  permit2_integration.rs  quickswap_integration.rs  safe_integration.rs  safe_management_integration.rs  spec_compliance.rs  standard_token.rs  standard_token_e2e.rs  userops_integration.rs
crates/clear-signing/tests/fixtures/: 1inch-swap-calldata.hex  1inch-v4-swap-eth-sand.hex  1inch-v5-swap_0.hex  1inch-v5-swap_1.hex  aave-gateway.json  calldata-AggregationRouterV4-eth.json  calldata-AggregationRouterV5.json  calldata-OkxDexRouterV1.0.7-multi-commission.json  calldata-QuickSwap.json  common-Safe.json  erc20-approve.json  erc20-transfer.json
crates/cs-test/: Cargo.toml
crates/cs-test/src/: compare.rs  lib.rs  main.rs  provider.rs  report.rs  results.rs  rlp.rs  runner.rs  schema.rs
crates/cs-test/tests/: registry_regressions.rs  smoke.rs
crates/cs-test/tests/fixtures/: permit2.tests.json  smoke.tests.json
(+231 files in other folders)
