[package]
name = "clear-signing"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Rozwarski"]
description = "ERC-7730 v2 clear signing library: decodes and formats Ethereum calldata and EIP-712 typed data for human-readable display."
license = "MIT OR Apache-2.0"
repository = "https://github.com/llbartekll/clear-signing"
homepage = "https://github.com/llbartekll/clear-signing"
documentation = "https://docs.rs/clear-signing"
readme = "README.md"
keywords = ["erc7730", "ethereum", "clear-signing", "calldata", "eip712"]
categories = ["cryptography::cryptocurrencies", "encoding"]
exclude = ["tests/fixtures/**"]

[package.metadata.docs.rs]
features = ["uniffi", "github-registry"]

[lib]
name = "clear_signing"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[features]
default = []
uniffi = ["dep:uniffi", "uniffi/cli"]
github-registry = ["dep:reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = { version = "0.4", features = ["serde"] }
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
uniffi = { version = "0.31.0", default-features = false, features = ["tokio"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"], optional = true }
